# FULL-STACK-NEXTJS-AGENT

./: .env.example  .gitignore  README.md  debug_output_final.txt  debug_sandbox.py  dev_server.py  main.py  pyproject.toml  test_deployer.py
.kiro/steering/: rules.md
docs/: FinalGoal.md  WorkPackages.md  gemini_instructions.md
docs/Tutorial/: Tutorial.md  log.txt
legacy/: coding_agent.py  data_analyst.py
legacy/_old/: inspect_events.py  test_output.txt  test_smart_logging.py
lib/: README.md  context_manager.py  deployer.py  hooks.py  prompts.py  smart_logging.py  tools.py
lib/agents/: __init__.py  orchestrator.py  prompts.py  specialized.py  tools_registry.py
lib/agents/sub_agents/: __init__.py
lib/agents/sub_agents/backend/: __init__.py  agent.py  prompt.py
lib/agents/sub_agents/context/: __init__.py  agent.py  prompt.py
lib/agents/sub_agents/frontend/: __init__.py  agent.py  prompt.py
lib/agents/sub_agents/qa/: __init__.py  agent.py  prompt.py
lib/agents/sub_agents/uiux/: __init__.py  agent.py  prompt.py
lib/config/: __init__.py  loader.py  schema.py  settings.yaml
lib/llm/: __init__.py  anthropic_client.py  bedrock_client.py  factory.py  gemini_client.py  llamaapi_client.py  openai_client.py
ui/: gradio_app.py
