[project]
name = "agent-full-stack"
version = "0.1.0"
description = "Agente autónomo que genera aplicaciones Next.js completas usando Strands + E2B + Bedrock"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "e2b-code-interpreter>=2.5.0",
    # Bedrock (boto3) ya viene incluido en strands-agents base — no necesita extra
    "gradio>=6.9.0",
    "pyyaml>=6.0.3",
    "strands-agents>=1.32.0",
    "strands-agents-tools>=0.2.23",
]

# Instala solo el proveedor que necesitas (Bedrock no requiere extra):
#   uv sync --extra gemini    → Google Gemini  (google-genai)
#   uv sync --extra openai    → OpenAI         (openai)
#   uv sync --extra anthropic → Anthropic      (anthropic)
#   uv sync --extra llamaapi  → LlamaAPI       (llama-api-client)
#   uv sync --extra mistral   → Mistral        (mistralai)
[project.optional-dependencies]
gemini-client = [
    "strands-agents[gemini]>=1.32.0",
]
